2010-02-26  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #13493: Cleanup return value in t3lib_userauthgroup check() (Thanks to Georg Ringer)
	* Fixed bug #12849: Element wizard & web_list.allowedNewTables doesn't respect hiding pages (Thanks to Georg Ringer)
	* Fixed bug #13611: Replace calls to t3lib_div:: within t3lib_div to self:: due to performance reasons (Thanks to Georg Ringer)

2010-02-25  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #13651: htmlArea RTE: Table insertion is broken in IE8
	* Added feature #13667: htmlArea RTE: Make toolbar dropdown size configurable in Page TSConfig
	* Cleanup #13668: htmlArea RTE: Cleanup some unused code (acronym, color, font)
	* Fixed bug #13671: htmlArea RTE: Invalid reference to font options in WebKit browsers
	* Fixed bug #13672: htmlArea RTE: Conflicting configuration property name
	* Cleanup #13673: htmlArea RTE: url to acronym module is not used anymore

2010-02-24  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #13470: Session/Login not working in IE8 across subdomains 

2010-02-24  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #13637: [EM] Upload to TER is broken

2010-02-23  Benjamin Mack  <benni@typo3.org>

	* Release of TYPO3 4.4.0alpha1

2010-02-23  Benjamin Mack  <benni@typo3.org>

	* Release of TYPO3 4.4.0alpha1

2010-02-23  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #13372: saltedpasswords - Authentication Bypass in frontend user authentication (thanks to Marcus Krause & Dmitry Dulepov)
	* Fixed bug #13394: Information disclosure in sysext:sys_actions (thanks to Georg Ringer)
	* Fixed bug #13042: XSS in index.php (thanks to Georg Ringer)
	* Fixed bug #11617: XSS in template module (thanks to Georg Ringer)
	* Fixed bug #13249: XSS in TS Object Browser (thanks to Marcus Krause)
	* Fixed bug #11621: XSS vulnerabilities in workspace module (thanks to Georg Ringer)
	* Fixed bug #11620: XSS vulnerability in task center module (thanks to Georg Ringer)