@@ -1,5 +1,6 @@
 2010-02-26  Benjamin Mack  <benni@typo3.org>
 
+	* Fixed bug #13591: Full search causes error if TCA has tables without any columns (Thanks to Fabrizio Branca)
 	* Fixed bug #13493: Cleanup return value in t3lib_userauthgroup check() (Thanks to Georg Ringer)
 	* Fixed bug #12849: Element wizard & web_list.allowedNewTables doesn't respect hiding pages (Thanks to Georg Ringer)
 	* Fixed bug #13611: Replace calls to t3lib_div:: within t3lib_div to self:: due to performance reasons (Thanks to Georg Ringer)
